added file path formation for proint files